tests/baselines/reference/typeofSimple.errors.txt
tests/cases/compiler/typeofSimple.ts(3,5): error TS2323: Type 'number' is not assignable to type 'string'.
tests/cases/compiler/typeofSimple.ts(8,21): error TS2304: Cannot find name 'J'.


==== tests/cases/compiler/typeofSimple.ts (2 errors) ====
    var v = 3;
    var v2: typeof v;
    var v3: string = v2; // Not assignment compatible
        ~~
!!! error TS2323: Type 'number' is not assignable to type 'string'.
    
    interface I<T> { x: T; }
    interface J { }
    
    var numberJ: typeof J; //Error, cannot reference type in typeof
                        ~
!!! error TS2304: Cannot find name 'J'.
    var numberI: I<typeof v2>;
    
    var fun: () => I<number>;
    numberI = fun();